# Biometric-Verified-Multiplayer-Arena

./: README.md  main.py  pyproject.toml
phase1/: batch_data.csv  scraper.py
phase2/: authenticator.py  facial_recognition_module.py  login.html
phase3/: dashboard.css  dashboard.html  dashboard.js  main.py
phase3/Dashboard/: dashboard.css  dashboard.html  dashboard.js
phase3/Room/[roomid]/: index.html  room.css  room.js
phase4/: LeaderBoard.css  LeaderBoard.html  LeaderBoard.js
